Default template updates
* Added argcomplete to the default project template
* Added parser startingpoint to the default project template
* Added emailvalidator
* Bugfix Default template pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ requires-python = ">=3.10"
 dependencies = [
     "rich",
     "inquirer",
+    "email-validator",
     "jinja2",
     "pre-commit",
 ]
